[gd_scene load_steps=21 format=2]

[ext_resource path="res://horsie/horsie.gd" type="Script" id=1]
[ext_resource path="res://horsie/horsie_bw.png" type="Texture" id=2]
[ext_resource path="res://horsie/smoke.png" type="Texture" id=3]
[ext_resource path="res://horsie/rater.png" type="Texture" id=4]
[ext_resource path="res://sfx/fart5.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/fart3.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/fart1.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/fart2.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/fart4.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 15.0 ]
}

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0231023, 0.137814 ), 0.0, 0.720113, 0, 1, Vector2( 0.389439, 0.401618 ), 0.720113, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.25
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 90.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 231, 275 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 231, 275 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 462, 0, 231, 275 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="horsie" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -17, -17 )

[node name="face" type="Sprite" parent="sprite"]
position = Vector2( 5, 2.5 )
rotation = 0.218166
offset = Vector2( 0, -32 )

[node name="follow" type="PathFollow2D" parent="."]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.4, 0.4 )

[node name="remote_transform" type="RemoteTransform2D" parent="follow"]
update_scale = false

[node name="sensor" type="Area2D" parent="."]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.2, 0.2 )
monitoring = false

[node name="shape" type="CollisionShape2D" parent="sensor"]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "run"
anims/run = SubResource( 2 )

[node name="smoke" type="Particles2D" parent="."]
modulate = Color( 0.435294, 0.392157, 0.392157, 1 )
show_behind_parent = true
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.4, 0.4 )
amount = 10
lifetime = 2.0
randomness = 0.25
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="turbo_sounds" type="Node" parent="."]

[node name="1" type="AudioStreamPlayer2D" parent="turbo_sounds"]
stream = ExtResource( 7 )
volume_db = 8.18

[node name="2" type="AudioStreamPlayer2D" parent="turbo_sounds"]
stream = ExtResource( 8 )

[node name="3" type="AudioStreamPlayer2D" parent="turbo_sounds"]
stream = ExtResource( 6 )
volume_db = 4.285

[node name="4" type="AudioStreamPlayer2D" parent="turbo_sounds"]
stream = ExtResource( 9 )
volume_db = 5.843

[node name="5" type="AudioStreamPlayer2D" parent="turbo_sounds"]
stream = ExtResource( 5 )
volume_db = 6.232

[node name="turbo_flames" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -17, -1 )
rotation = -1.39626
scale = Vector2( 0.05, 0.1 )
frames = SubResource( 11 )
frame = 1
playing = true
